# pycon-apac-2024

backend/: .gitignore  Makefile  pyproject.toml
backend/src/: main.py  tables.py
backend/src/api/v1/: users.py
backend/src/api/v2/: users.py
backend/src/responses/: NotFound404.py
frontend/: next.config.js  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/infinite/: page.tsx
frontend/src/components/: Provider.tsx  toErrorMessage.tsx
frontend/src/openapi/: pycon.ts  pyconClient.ts
